style(fix): fix content overlapping on containers
style(feat): styles for new pages

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -2,6 +2,7 @@
 
 .container{
   padding: calc(var(--navbar-h, 0) + 2.5rem) 1.25rem;
+  margin-bottom: calc(var(--navbar-h, 0) + 2.5rem); /* as the footer is fixed, the margin-bottom is the same as the footer height to avoid overlapping or content hiding */
 }
 
 /* ----------------- Hamburger menu ----------------- */
@@ -261,6 +262,7 @@ body:has(.sidebar_navigation_wrapper[data-state="open"]) {
   align-items: center;
   /* -navbar-h actually is the height of the navbar + the distance from the top */
   padding: calc(var(--navbar-h, 0) + 2.5rem) 1.25rem; /* getting the navbar height from js + 20px */
+  margin-bottom: calc(var(--navbar-h, 0) + 2.5rem); /* as the footer is fixed, the margin-bottom is the same as the footer height to avoid overlapping or content hiding */
 }
 
 .home_main_logo{
@@ -357,7 +359,7 @@ body:has(.sidebar_navigation_wrapper[data-state="open"]) {
   display: flex;
   flex-direction: column;
   gap: 1.5rem; /* 24px */
-
+  z-index: 10;
   border-radius: 1.875rem 1.875rem 0rem 0rem; /* 30px */
 }
 
@@ -580,6 +582,7 @@ body:has(.sidebar_navigation_wrapper[data-state="open"]) {
 /* ----------------- Requests page ----------------- */
 .requests_container{
   padding: calc(var(--navbar-h, 0) + 2.5rem) 1.25rem;
+  margin-bottom: calc(var(--navbar-h, 0) + 2.5rem); /* as the footer is fixed, the margin-bottom is the same as the footer height to avoid overlapping or content hiding */
 }
 
 .requests_list{
@@ -614,12 +617,11 @@ body:has(.sidebar_navigation_wrapper[data-state="open"]) {
 }
 
 .request_item_picture{
-  width: 80px;
-  height: 100%;
-  object-fit: cover;
+  width: 100%;
+  max-width: 80px;
   flex-shrink: 0;
   align-self: stretch;
-
+  overflow: hidden;
   & img{
     width: 100%;
     height: 100%;
@@ -841,6 +843,202 @@ body:has(.sidebar_navigation_wrapper[data-state="open"]) {
     }
 
     & .news_card_link{
+      margin-top: 0.75rem;
+      color: hsla(var(--black), 1);
+      font-size: 0.75rem;
+      font-weight: 500;
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      gap: 0.25rem;
+
+      & span{
+        font-size: 0.75rem;
+      }
+    }
+  }
+}
+
+/* ----------------- Events page ----------------- */
+
+.events_list{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.event_card{
+  position: relative;
+  overflow: hidden;
+  border-radius: 0.625rem;
+  background: hsla(var(--white), 1);
+  display: flex;
+
+  & .event_card_image{
+    width: 100%;
+    overflow: hidden;
+    & img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  & .event_card_info{
+    position: absolute;
+    bottom: 0.875rem;
+    z-index: 2;
+    width: 100%;
+    max-width: calc(100% - (1.25rem * 2));
+    left: 50%;
+    transform: translateX(-50%);
+    background: hsla(var(--white), 1);
+    color: hsla(var(--black), 1);
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.625rem;
+
+    display: flex;
+    gap: 0.5rem; /* 8px */
+    align-items: center;
+
+    .event_date{
+      padding-right: 0.5rem;
+      border-right: 1px solid hsla(var(--black), 0.15);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 0.25rem; /* 4px */
+      
+      .event_day{
+        font-size: 1.125rem;
+        font-weight: 700;
+      }
+      .event_month{
+        font-size: 0.6875rem;
+        font-weight: 500;
+      }
+      .event_year{
+        font-size: 0.75rem;
+        font-weight: 300;
+      }
+    }
+
+    .event_description{
+      
+      font-size: 0.6875rem;
+      font-weight: 500;
+
+      .event_duration{
+        color: hsla(var(--black), 0.62);
+        margin-top: 0.375rem; /* 6px */ 
+      }
+    }
+  }
+}
+
+/* ----------------- Team page ----------------- */
+
+.team_list{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.member_card{
+  display: flex;
+  flex-direction: row;
+  border-radius: 0.625rem;
+  background: hsla(var(--white), 1);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
+  & .member_image{
+    width: 100%;
+    max-width: 90px;
+    overflow: hidden;
+    flex-shrink: 0;
+    & img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  & .member_content{
+    padding: 0.75rem;
+    & .member_title{
+      font-weight: 500;
+      color: hsla(var(--black), 1);
+      font-size: 0.75rem; /* 12px */
+    }
+
+    & .member_description{
+      color: hsla(var(--black), 1);
+      font-size: 0.6875rem; /* 11px */
+      font-weight: 300;
+      margin-top: 0.25rem;
+    }
+
+    & .member_role{
+      color: hsla(var(--black), 0.53);
+      font-size: 0.75rem; /* 12px */
+      text-transform: uppercase;
+      font-weight: 500;
+      margin-top: 1rem;
+    }
+  }
+}
+
+/* ----------------- Photo gallery page ----------------- */
+
+.gallery_list{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.gallery_card{
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.625rem;
+  background: hsla(var(--white), 1);
+  overflow: hidden;
+  & .gallery_image{
+    width: 100%;
+    max-width: 100%;
+    max-height: 170px;
+    overflow: hidden;
+    flex-shrink: 0;
+    & img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  & .gallery_content{
+    padding: 0.75rem 1rem;
+    & .gallery_title{
+      font-weight: 700;
+      color: hsla(var(--black), 1);
+      font-size: 1rem; /* 16px */
+    }
+
+    & .gallery_date{
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 0.5rem; /* 8px */
+      margin-top: 0.75rem;
+      color: hsla(var(--black), 0.5);
+      font-size: 0.75rem;
+
+      & span{
+        font-size: 1rem;
+      }
+    }
+
+    & .gallery_link{
       margin-top: 0.75rem;
       color: hsla(var(--black), 1);
       font-size: 0.75rem;
